fixed issue with category color not showing up on single ticket sidebar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -962,6 +962,7 @@ button.close-ticket:hover {
     border-radius: 3px;
     padding: 2px 5px;
     font-size: 14px;
+    background: #f9f9f9;
 }
 
 .sidebar .ticket-details .ticket-stale {
